objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Panel_Manufacturer__c</fullName>
        <description>Needed for Support Services as well as Solar construction.</description>
        <inlineHelpText>Please input the Name of the Vendor/Company, who is expected to supply RES with the Solar Panels.</inlineHelpText>
        <label>Panel Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BP Solar</fullName>
                </value>
                <value>
                    <fullName>Canadian Solar</fullName>
                </value>
                <value>
                    <fullName>ET Solar</fullName>
                </value>
                <value>
                    <fullName>First Solar</fullName>
                </value>
                <value>
                    <fullName>Jinko</fullName>
                </value>
                <value>
                    <fullName>Kyocera</fullName>
                </value>
                <value>
                    <fullName>MEMC</fullName>
                </value>
                <value>
                    <fullName>Sanyo</fullName>
                </value>
                <value>
                    <fullName>Sharp</fullName>
                </value>
                <value>
                    <fullName>Solon</fullName>
                </value>
                <value>
                    <fullName>Suntech</fullName>
                </value>
                <value>
                    <fullName>Trina Solar</fullName>
                </value>
                <value>
                    <fullName>Yingli</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Support Services:
To indicate what the precursor Oppty was that led to this Support Services Oppty.</description>
        <inlineHelpText>For Support Services:
To indicate what the precursor Oppty was that led to this Support Services Oppty.</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Support Service Opportunities</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peak_Electricity_Demand_MW__c</fullName>
        <label>Peak Electricity Demand (MW)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Collection__c</fullName>
        <label>% Collection</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Distribution__c</fullName>
        <label>% Distribution</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Storage__c</fullName>
        <label>% Storage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Substation__c</fullName>
        <label>% Substation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Transmission__c</fullName>
        <label>% Transmission</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Unallocated__c</fullName>
        <formula>100 - (Percent_Collection__c + Percent_Distribution__c + Percent_Storage__c + Percent_Substation__c + Percent_Transmission__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Unallocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PnL__c</fullName>
        <inlineHelpText>Stands for Profit and Loss. Represents the major profit centers within RES.</inlineHelpText>
        <label>PnL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Construction</fullName>
                </value>
                <value>
                    <fullName>RES Developed Project</fullName>
                </value>
                <value>
                    <fullName>Distributed</fullName>
                </value>
                <value>
                    <fullName>Transmission (S3)</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Support Services</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Winning_Sites__c</fullName>
        <inlineHelpText>Storage Specific Field</inlineHelpText>
        <label>Potential Winning Sites</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Con__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox to designate this Opportunity should be included on the Pre-Con/Estimating Bid Board report.</inlineHelpText>
        <label>Pre-Con</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriorStage__c</fullName>
        <label>PriorStage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The of this field is to prioritize Opportunities RES has listed in our current budget/forecast.

Priority 1 – Opportunities which are included in the budget/forecast
Priority 2 -  Back up opportunities to Priority 1 to be assessed when RFP issued.  Usually bid as back-up.
Opportunistic – Non-targeted opportunities which we just want to track or assess as RFP gets closer.  Not likely to bid.

This would only apply to construction opportunities.  Not PPAs.</description>
        <inlineHelpText>Guidelines for Construction Opps:

Priority 1 - Included in the budget/forecast.
Priority 2 - Back up Opps to Priority 1 to be assessed when RFP issued. Usually bid as back-up.
Opportunistic - Non-targeted Opps that we just want to track or asses.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1</fullName>
                    <color>#009900</color>
                    <label>Priority 1</label>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                    <color>#000099</color>
                    <label>Priority 2</label>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
                <value>
                    <fullName>Priority 4</fullName>
                </value>
                <value>
                    <fullName>Opportunistic</fullName>
                    <color>#663366</color>
                    <label>Opportunistic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Development__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Development</label>
        <referenceTo>RES_Projects__c</referenceTo>
        <relationshipLabel>Primary Opportunities</relationshipLabel>
        <relationshipName>Primary_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project/Work Order #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_RFP__c</fullName>
        <inlineHelpText>URL to either the RFP, or the final Bid Document</inlineHelpText>
        <label>Proposal / RFP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proposal_Submitted_Date__c</fullName>
        <description>Support Services / EMEA Field</description>
        <inlineHelpText>Date of when we actually submitted our Proposal/Bid to the client.</inlineHelpText>
        <label>Proposal Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Questions_Due_Date__c</fullName>
        <label>Questions Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RES_Country__c</fullName>
        <description>Vertiba 4/10/2014 - Created for phase1</description>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RES_Geography__c</fullName>
        <description>Prior Business Unit field</description>
        <label>RES Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>UK&amp;I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RES_Mapping_Link__c</fullName>
        <description>Vertiba 04/10/2014- Created for Phase1</description>
        <label>Mapping Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RES_Technology_Type__c</fullName>
        <description>Vertiba 2/1/2014 - Created to track the technology information ssociated to the opportunity</description>
        <label>Technology Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wind - Onshore</fullName>
                </value>
                <value>
                    <fullName>Wind - Offshore</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Hydro</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Collection Systems</fullName>
                </value>
                <value>
                    <fullName>Substation</fullName>
                </value>
                <value>
                    <fullName>Tower Wiring</fullName>
                </value>
                <value>
                    <fullName>Hydrogen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Issued_Date__c</fullName>
        <inlineHelpText>Date RES received the RFP</inlineHelpText>
        <label>RFP/ITT Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTO_Region__c</fullName>
        <label>RTO / Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AESO</fullName>
                </value>
                <value>
                    <fullName>BASN</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CAISO</fullName>
                </value>
                <value>
                    <fullName>CALN</fullName>
                </value>
                <value>
                    <fullName>CALS</fullName>
                </value>
                <value>
                    <fullName>DSW</fullName>
                </value>
                <value>
                    <fullName>ERCOT</fullName>
                </value>
                <value>
                    <fullName>FRCC</fullName>
                </value>
                <value>
                    <fullName>HECO</fullName>
                </value>
                <value>
                    <fullName>IESO</fullName>
                </value>
                <value>
                    <fullName>IID (CA)</fullName>
                </value>
                <value>
                    <fullName>ISO-NE (NEPOOL)</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>MAPP</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
                <value>
                    <fullName>MISO</fullName>
                </value>
                <value>
                    <fullName>NORW</fullName>
                </value>
                <value>
                    <fullName>NYISO</fullName>
                </value>
                <value>
                    <fullName>PJM</fullName>
                </value>
                <value>
                    <fullName>Quebec</fullName>
                </value>
                <value>
                    <fullName>ROCK</fullName>
                </value>
                <value>
                    <fullName>Saks Power</fullName>
                </value>
                <value>
                    <fullName>SERC</fullName>
                </value>
                <value>
                    <fullName>SERC-E</fullName>
                </value>
                <value>
                    <fullName>SERC-N</fullName>
                </value>
                <value>
                    <fullName>SERC-SE</fullName>
                </value>
                <value>
                    <fullName>SERC-W</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>TVA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Previous:

CASE(State_Province__c,
&quot;AK&quot;, &quot;West&quot;,
&quot;CA&quot;, &quot;West&quot;,
&quot;CO&quot;, &quot;West&quot;,
&quot;HA&quot;, &quot;West&quot;,
&quot;MT&quot;, &quot;West&quot;,
&quot;NV&quot;, &quot;West&quot;,
&quot;ID&quot;, &quot;West&quot;,
&quot;OR&quot;, &quot;West&quot;,
&quot;UT&quot;, &quot;West&quot;,
&quot;WA&quot;, &quot;West&quot;,
&quot;WY&quot;, &quot;West&quot;,

&quot;AZ&quot;, &quot;Southwest&quot;,
&quot;NM&quot;, &quot;Southwest&quot;,
&quot;OK&quot;, &quot;Southwest&quot;,
&quot;TX&quot;, &quot;Southwest&quot;,

&quot;CT&quot;, &quot;Northeast&quot;,
&quot;DC&quot;, &quot;Northeast&quot;,
&quot;DE&quot;, &quot;Northeast&quot;,
&quot;ME&quot;, &quot;Northeast&quot;,
&quot;MA&quot;, &quot;Northeast&quot;,
&quot;MD&quot;, &quot;Northeast&quot;,
&quot;NH&quot;, &quot;Northeast&quot;,
&quot;NJ&quot;, &quot;Northeast&quot;,
&quot;NY&quot;, &quot;Northeast&quot;,
&quot;PA&quot;, &quot;Northeast&quot;,
&quot;RI&quot;, &quot;Northeast&quot;,
&quot;VT&quot;, &quot;Northeast&quot;,

&quot;AL&quot;, &quot;South&quot;,
&quot;AR&quot;, &quot;South&quot;,
&quot;FL&quot;, &quot;South&quot;,
&quot;GA&quot;, &quot;South&quot;,
&quot;KY&quot;, &quot;South&quot;,
&quot;LA&quot;, &quot;South&quot;,
&quot;MS&quot;, &quot;South&quot;,
&quot;NC&quot;, &quot;South&quot;,
&quot;SC&quot;, &quot;South&quot;,
&quot;TN&quot;, &quot;South&quot;,
&quot;VA&quot;, &quot;South&quot;,
&quot;WV&quot;, &quot;South&quot;,

&quot;IL&quot;, &quot;Midwest&quot;,
&quot;IN&quot;, &quot;Midwest&quot;,
&quot;IA&quot;, &quot;Midwest&quot;,
&quot;KS&quot;, &quot;Midwest&quot;,
&quot;MI&quot;, &quot;Midwest&quot;,
&quot;MN&quot;, &quot;Midwest&quot;,
&quot;MO&quot;, &quot;Midwest&quot;,
&quot;NE&quot;, &quot;Midwest&quot;,
&quot;ND&quot;, &quot;Midwest&quot;,
&quot;OH&quot;, &quot;Midwest&quot;,
&quot;SD&quot;, &quot;Midwest&quot;,
&quot;WI&quot;, &quot;Midwest&quot;,
&quot;&quot;,&quot;&quot;,
Case(RES_Country__c, &quot;Canada&quot;, &quot;Canada&quot;,
&quot;0&quot;))</description>
        <formula>TEXT(Project_Development__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Month__c</fullName>
        <formula>Amount / ((Rev_Recognition_End_Date__c - Rev_Recognition_Start_Date__c)/30.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rev Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rev_Recognition_End_Date__c</fullName>
        <label>Rev Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rev_Recognition_Start_Date__c</fullName>
        <label>Rev Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selected_Bid_Count__c</fullName>
        <label>Selected Bid Count</label>
        <summaryFilterItems>
            <field>PPA_Bid__c.Selected_Bid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PPA_Bid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Services_Sub_type__c</fullName>
        <label>Services Sub-type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Life Extension – Leases</fullName>
                </value>
                <value>
                    <fullName>Life Extension – Permitting/Planning</fullName>
                </value>
                <value>
                    <fullName>Life Extension - Technical</fullName>
                </value>
                <value>
                    <fullName>End of Life Options – Life Extension</fullName>
                </value>
                <value>
                    <fullName>End of Life Options - Repowering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shortlist_Date__c</fullName>
        <label>Shortlist Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shortlisted_Selected_Project_s__c</fullName>
        <description>Used solely by the Origination Team. Created for reporting purposes, so that instead of having a separate row for each PPA Bid / Project Development, all those project names can be captured in one cell / row.</description>
        <inlineHelpText>Please list out the names of all the Project Developments that have been Shortlisted/Selected.</inlineHelpText>
        <label>Shortlisted/Selected Project(s)</label>
        <length>12768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Size_3_Units__c</fullName>
        <label>Size 3 Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MW</fullName>
                </value>
                <value>
                    <fullName>kW</fullName>
                </value>
                <value>
                    <fullName>MWh</fullName>
                </value>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>kV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_3__c</fullName>
        <inlineHelpText>Please input &apos;Size 3 Units&apos; in order to designate the appropriate unit of measure</inlineHelpText>
        <label>Size 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_MWdc__c</fullName>
        <inlineHelpText>The Project&apos;s Capacity/Size in MW DC?</inlineHelpText>
        <label>Size (MWdc)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_MWh__c</fullName>
        <inlineHelpText>This field indicates thee Size/Capacity in MW hours for this opportunity.</inlineHelpText>
        <label>Size (MWh)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <inlineHelpText>Enter a MW figure indicating the Size/Capacity of this project.</inlineHelpText>
        <label>Size (MWac)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_kV__c</fullName>
        <label>Size (kV)</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_Constr_Margin__c</fullName>
        <inlineHelpText>The Profit associated for solely the Construction of the Solar farm.</inlineHelpText>
        <label>Solar Const Profit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solar_Constr_Revenue__c</fullName>
        <inlineHelpText>If there are multiple Technology Types included in this Opportunity and one of them includes Solar, please input the revenue associated with solely the Construction of Solar here.</inlineHelpText>
        <label>Solar Const Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solar_Electrical_Amount__c</fullName>
        <label>Solar Electrical Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StageGate_Doc__c</fullName>
        <label>StageGate Doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Augmentation_1_MWh_DC__c</fullName>
        <label>Augmentation 1 (MWh DC)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Augmentation_1_Year__c</fullName>
        <label>Augmentation 1 (Year)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Augmentation_2_MWh_DC__c</fullName>
        <label>Augmentation 2 (MWh DC)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Augmentation_2_Year__c</fullName>
        <label>Augmentation 2 (Year)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Augmentation_3_MWh_DC__c</fullName>
        <label>Augmentation 3 (MWh DC)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_BOP_Price__c</fullName>
        <inlineHelpText>BOP = Balance of Plant</inlineHelpText>
        <label>BOP Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Storage_Capacity_Plan__c</fullName>
        <label>Capacity Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overbuild for Life</fullName>
                </value>
                <value>
                    <fullName>Augmentation (AC)</fullName>
                </value>
                <value>
                    <fullName>Augmentation (DC)</fullName>
                </value>
                <value>
                    <fullName>No Capacity Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Cell_Price_kWh__c</fullName>
        <description>A Storage Specific Field</description>
        <label>Cell Price ($/kWh)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Storage_Contingency_Amount__c</fullName>
        <description>A Storage Specific Field</description>
        <label>Contingency $ Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Storage_Cycles_per_Year__c</fullName>
        <description>A Storage Specific Field</description>
        <label>Cycles per Year</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Description_of_BOP__c</fullName>
        <description>A Storage Specific Field</description>
        <inlineHelpText>Please describe unique site characteristics and other cost drivers associated with construction.</inlineHelpText>
        <label>Description of BOP</label>
        <length>2768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storage_Description_of_Other_Costs__c</fullName>
        <description>A Storage Specific Field</description>
        <inlineHelpText>Please describe other costs carried unique to the project, such as builders all risk (BAR), Bid bonds, etc.</inlineHelpText>
        <label>Description of Other Costs</label>
        <length>2768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storage_Direct__c</fullName>
        <label>Direct?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>